src/objects/Add_Meeting_Participant_Record_Type_MERC__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Associating meeting record type with participant record type options.</description>
    <fields>
        <fullName>Ad_Hoc_Consulting_MERC__c</fullName>
        <label>Ad_Hoc_Consulting</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completed_MERC__c</fullName>
        <label>Completed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forecasted_MERC__c</fullName>
        <label>Forecasted</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Independent_Sponsorship_MERC__c</fullName>
        <label>Independent_Sponsorship</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meeting_Active_MERC__c</fullName>
        <label>Meeting_Active</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meeting_Program_MERC__c</fullName>
        <label>Meeting_Program</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registered_MERC__c</fullName>
        <label>Registered</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Add Meeting Participant Record Type</label>
</CustomObject>